@@ -126,6 +126,22 @@
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent">
 
+              <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Grocy.Card.Text"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:visibility="@{formData.messageCopiedFromLive != null ? View.VISIBLE : View.GONE}">
+
+                <TextView
+                  style="@style/Widget.Grocy.TextView.Paragraph"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:textColor="?attr/colorOnSurfaceVariant"
+                  android:text="@{formData.messageCopiedFromLive}" />
+
+              </com.google.android.material.card.MaterialCardView>
+
               <LinearLayout
                 style="@style/Widget.Grocy.LinearLayout.ListItem"
                 android:paddingTop="0dp"
