@@ -20,16 +20,23 @@
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/container"
   style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Clickable.More"
-  tools:ignore="UseCompoundDrawables">
+  tools:ignore="UseCompoundDrawables"
+  android:paddingBottom="0dp"
+  android:paddingTop="0dp"
+  android:paddingStart="16dp"
+  android:paddingEnd="12dp">
 
   <TextView
     android:id="@+id/name"
     style="@style/Widget.Grocy.TextView.ListItem.Title"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_weight="1" />
+    android:layout_weight="1"
+    android:layout_marginVertical="12dp"
+    android:layout_marginEnd="24dp"/>
 
   <ImageView
     android:id="@+id/image_pending"
@@ -38,5 +45,14 @@
     android:src="@drawable/ic_round_cloud_pending"
     android:visibility="gone"
     tools:ignore="ContentDescription" />
+
+  <com.google.android.material.appbar.MaterialToolbar
+    android:id="@+id/toolbar"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:contentInsetStart="2dp"
+    app:contentInsetEnd="0dp"
+    app:contentPadding="0dp"
+    app:menu="@menu/menu_choose_product_entry" />
 
 </LinearLayout>
